--- a/Projekt/OnlineFerries/src/messages_de.properties
+++ b/Projekt/OnlineFerries/src/messages_de.properties
@@ -72,3 +72,7 @@ onlineferries_newCustomer_form_required_username=Benutzername erforderlich
 onlineferries_newCustomer_form_required_password=Passwort erforderlich
 onlineferries_newCustomer_form_invalid_username=ungültiger Benutzername
 onlineferries_newCustomer_form_invalid_password=ungültiges Passwort
+
+onlineferries_changeCustomer_title=Nutzerdaten ändern
+onlineferries_changeCustomer_form_submit=Speichern
+onlineferries_changeCustomer_form_abort=Abbrechen
