--- a/Projekt/OnlineFerries/src/messages_en.properties
+++ b/Projekt/OnlineFerries/src/messages_en.properties
@@ -42,3 +42,8 @@ onlineferries_newCustomer_form_required_username=Username required
 onlineferries_newCustomer_form_required_password=Password required
 onlineferries_newCustomer_form_invalid_username=invalid username
 onlineferries_newCustomer_form_invalid_password=invalid password
+
+onlineferries_changeCustomer_title=Change customer date
+onlineferries_changeCustomer_form_submit=Submit
+onlineferries_changeCustomer_form_abort=Abort
+
