Next step user data change

--- a/Projekt/OnlineFerries/src/messages_de.properties
+++ b/Projekt/OnlineFerries/src/messages_de.properties
@@ -74,6 +74,7 @@ onlineferries_newCustomer_form_invalid_username=ungültiger Benutzername
 onlineferries_newCustomer_form_invalid_password=ungültiges Passwort
 
 onlineferries_changeCustomer_title=Nutzerdaten ändern
+onlineferries_changeCustomer_form_load=Account Nr. laden
 onlineferries_changeCustomer_form_submit=Speichern
 onlineferries_changeCustomer_form_abort=Abbrechen
 
