--- a/Projekt/OnlineFerries/src/messages_en.properties
+++ b/Projekt/OnlineFerries/src/messages_en.properties
@@ -44,7 +44,7 @@ onlineferries_newCustomer_form_invalid_username=invalid username
 onlineferries_newCustomer_form_invalid_password=invalid password
 
 onlineferries_changeCustomer_title=Change customer date
-onlineferries_changeCustomer_form_load=Load Account Nr.
+onlineferries_changeCustomer_form_load=Load userdata
 onlineferries_changeCustomer_form_submit=Submit
 onlineferries_changeCustomer_form_abort=Abort
 
